[metadata]
name = yaycl-crypt
author = Sean myers
author-email = semyers@redhat.com
summary = YAML Config Autoloader Encryption Support
description-file = README
license = MIT
home-page = http://put.a.url.here/
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: MIT/Expat
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    yaycl_crypt

[entry_points]
yaycl.load_yaml =
    crypt = yaycl_crypt:load_yaml
