[metadata]
name = yaycl-crypt
author = Sean myers
author-email = semyers@redhat.com
summary = YAML Config Autoloader Encryption Support
description-file = README.md
license = MIT
home-page = https://github.com/seandst/yaycl-crypt
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    yaycl_crypt

[entry_points]
yaycl.load_yaml =
    crypt = yaycl_crypt:load_yaml

[bdist_wheel]
universal = 1
